--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Liam R. Carroll
 author:
-  name: Liam R. Carroll
+  name: Liam R. Carroll, 2021
   email: Liam.Robert.Carroll@gmail.com
 description: "Stuff I find interesting"
 
