--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,15 @@ description: "Stuff I find interesting"
 
 
 # Build settings
-remote_theme: jekyll/minima
+minima:
+  date_format: "%b %-d, %Y"
+
+theme: minima
+
+plugins:
+ - jekyll-feed
+ - jekyll-seo-tag
 
 # This turns on dark mode
-
+minima:
+  skin: solarized
