--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ author:
   email: Liam.Robert.Carroll@gmail.com
 description: "Stuff I find interesting"
 
-show_excerpts: true # set to true to show excerpts on the homepage
+show_excerpts: False # set to true to show excerpts on the homepage
 
 
 # Build settings
@@ -16,7 +16,8 @@ plugins:
  - jekyll-seo-tag
  - jekyll-relative-links
 
- 
+url: LRCarroll.github.io
+baseurl: /website/
 
 # This turns on dark mode
 minima:
