--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,8 @@ author:
   name: Liam R. Carroll, 2021
   email: Liam.Robert.Carroll@gmail.com
 description: "Stuff I find interesting"
-
+url: LRCarroll.github.io
+baseurl: /website/
 show_excerpts: False # set to true to show excerpts on the homepage
 
 
@@ -16,9 +17,8 @@ plugins:
  - jekyll-seo-tag
  - jekyll-relative-links
 
-url: LRCarroll.github.io
-baseurl: /website/
+
 
 # This turns on dark mode
-minima:
-  skin: dark
+#minima:
+  #skin: dark
